--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 
 .header {
+    height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,6 +25,49 @@
 }
 
 .nav-bar p {
-
     margin: 0px 10px;
+}
+
+.first-section {
+    height: 500px;
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.first-section div {
+    width: 50%;
+    text-align: left;
+    margin: auto 100px;
+}
+
+h1 {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.hero-text {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.hero-right p {
+    text-align: center;
+    background-color: white;
+    padding: 100px;
+}
+
+.hero-left {}
+
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    width: 100px;
+    height: 40px;
+    font-size: 16px;
+    border-radius: 10px;
+    font-weight: bold;
 }
