--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 }
 
 .first-section {
-    height: 500px;
+    height: 400px;
     background-color: #1F2937;
     display: flex;
     justify-content: center;
@@ -73,5 +73,77 @@ button {
 }
 
 .second-section {
-    height: 500px;
+    height: 300px;
+    align-items: center;
+    text-align: center;
+}
+
+.second-section h2 {
+    margin: 30px auto;
+}
+
+.card-row {
+    display: flex;
+    justify-content: space-around;
+    margin: 0 100px;
+    width: auto;
+
+}
+
+.card {
+    height: 100px;
+    width: 100px;
+}
+
+.illustration {
+    width: 100px;
+    height: 100px;
+    border: 3px solid blue;
+    border-radius: 10px;
+
+}
+
+.third-section {
+
+    background-color: #E5E7EB;
+    padding: 100px 200px;
+
+}
+
+.third-section p {
+    font-size: 36px;
+
+}
+
+#quote {
+    font-weight: light;
+    color: #1F2937
+}
+
+#author {
+    text-align: right;
+}
+
+
+.fourth-section {
+    height: 300px;
+
+    padding: 100px;
+
+}
+
+.cta-container {
+    background-color: #3882F6;
+    display: flex;
+    height: 100px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cta-container p {
+    margin-left: 20px;
+}
+
+.cta-container button {
+    margin-right: 20px;
 }
